# fast-api-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_ru.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml
backend/: .env.template  README.md  README_ru.md  alembic.ini  conftest.py  main.py  pyproject.toml  setup.cfg
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: c79001bbe89d_make_models.py
backend/application/: __init__.py
backend/application/common/: __init__.py  container.py
backend/application/web/: __init__.py  application.py  base.py  main.py  urls.py
backend/application/web/health_check/: __init__.py  api.py
backend/application/web/upload_file/: __init__.py  api.py  exceptions.py
backend/apps/health_check/: urls.py
backend/apps/health_check/api/: health_check.py
backend/apps/health_check/tests/: test_health_check.py
backend/apps/health_check/views/: health_check.py
backend/apps/hello_world/: api.py  urls.py
backend/apps/hello_world/api/: hello_world.py
backend/apps/hello_world/models/: __init__.py  post_hello_world.py
backend/apps/hello_world/tests/: test_hello_world.py
backend/apps/hello_world/use_cases/: __init__.py  upload_file.py
backend/apps/hello_world/views/: hello_world.py
backend/apps/oauth2/: urls.py
backend/apps/oauth2/depends/: __init__.py  app.py
backend/apps/oauth2/models/: __init__.py  access_token.py  apps.py
backend/apps/token/: urls.py
backend/common/: __init__.py  base.py  config.py  container.py  db.py
backend/common/resources/: __init__.py
backend/common/services/: __init__.py  random_re.py  storage.py
backend/core/: application.py  config.py  container.py  db.py  urls.py
backend/core/containers/: __init__.py  config.py  resources.py  storage.py
backend/core/db/: setup.py
backend/core/depends/: __init__.py  get_config.py  get_database.py  get_host_remote.py  get_object.py
backend/core/middlewares/: database.py  settings.py
backend/core/resources/: __init__.py  database.py  storage.py
backend/core/tests/: transaction_test_case.py
backend/core/utils/: get_object_or_404.py  init_config.py  init_db.py
backend/docker/: Dockerfile  entrypoint.sh
backend/domain/: __init__.py
backend/domain/upload_file/: __init__.py  exceptions.py
backend/infrastructure/: __init__.py
backend/infrastructure/database/: __init__.py  base.py  database.py
backend/infrastructure/services/: __init__.py  random_re_rstr.py  storage_mock.py  storage_s3.py
backend/infrastructure/upload_file/: __init__.py
backend/libs/punq/: __init__.py  _compat.py
backend/scripts/: migrate.sh  runserver-dev.sh  runserver.sh  startapp.sh
backend/tests/: conftest.py
backend/tests/health_check/: test_health_check.py
backend/tests/hello_world/: test_hello_world.py
backend/tests/oauth2/: test_get_access_protected_app.py  test_get_access_token.py
backend/tests/token/: test_verify_token.py
backend/tests/upload_file/: test_upload_file.py
(+35 files in other folders)
