[tool.poetry]
name = "backend"
version = "0.0.0"
description = ""
authors = ["Алексей Чистов <aleksey.chistov@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
multi_line_output = 3
line_length = 100
include_trailing_comma = true

[tool.poetry.dependencies]
python = "^3.10.2"

# Server
uvicorn = "^0.15.0"
uvloop = "^0.16.0"

# DB
SQLAlchemy = {version = ">=1.4,<2", extras = ["asyncio", "mypy"]}
SQLAlchemy-Utils = "^0.37.9"
alembic = "^1.7.4"
asyncpg = "^0.24.0"
psycopg2-binary = "^2.9.1"

# Web-Framework
fastapi = "^0.70.0"
pydantic = "^1.8.2"
python-multipart = "^0.0.5"

# Utils
Pillow = "^8.4.0"
PyJWT = "^2.3.0"
aioboto3 = "^9.2.2"
rstr = "^3.0.0"

# Typehinting
mypy-extensions = "^0.4.3"
mypy = "^0.931"

[tool.poetry.dev-dependencies]
# Linting
flake8 = "^4.0.1"
flake8-alphabetize = "^0.0.17"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.3"
flake8-broken-line = "^0.4.0"
flake8-bugbear = "^22.1.11"
flake8-builtins = "^1.5.3"
flake8-class-attributes-order = "^0.1.2"
flake8-comprehensions = "^3.8.0"
flake8-debugger = "^4.0.0"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.2.0"
flake8-isort = "^4.1.1"
flake8-pie = "^0.15.0"
flake8-print = "^4.0.0"
flake8-printf-formatting = "^1.1.2"
flake8-pytest-style = "^1.6.0"
flake8-walrus = "^1.1.0"

# Formatting
black = "^21.9b0"
isort = "^5.9.3"

# Stubs
python-dotenv = "^0.19.2"

# Tests
httpx = "^0.20.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-xdist = "^2.4.0"
